# ml-hw-2

./: .gitignore  pyproject.toml  Практика_Оптимизация.ipynb
.ipynb_checkpoints/: Практика_Оптимизация-checkpoint.ipynb
